[gd_scene load_steps=14 format=3 uid="uid://bm4ldjy2eb2yw"]

[ext_resource type="Script" path="res://scripts/BasicEnemy.gd" id="1_3pmqw"]
[ext_resource type="Script" path="res://scripts/MyHitBox.gd" id="2_jyerc"]
[ext_resource type="Script" path="res://scripts/StateMachine.gd" id="3_v5ame"]
[ext_resource type="Script" path="res://scripts/FollowGround.gd" id="4_0x7kd"]
[ext_resource type="Script" path="res://scripts/EnemyIdle.gd" id="5_2kni1"]
[ext_resource type="Script" path="res://scripts/EnemyAttack.gd" id="6_k47xl"]
[ext_resource type="Script" path="res://scripts/MyHurtBox.gd" id="7_bstqr"]

[sub_resource type="Animation" id="Animation_uig0a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/MyHitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_e2j7c"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/MyHitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o1b2i"]
_data = {
"RESET": SubResource("Animation_uig0a"),
"attack": SubResource("Animation_e2j7c")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4j10g"]
radius = 85.0
height = 432.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04o2e"]
size = Vector2(467, 441)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1dsbx"]
size = Vector2(189, 442)

[node name="BruiserEnemy" type="CharacterBody2D"]
collision_layer = 9
collision_mask = 5
platform_floor_layers = 4294901823
script = ExtResource("1_3pmqw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o1b2i")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4j10g")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="MyHitBox" type="Area2D" parent="Sprite2D"]
script = ExtResource("2_jyerc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/MyHitBox"]
position = Vector2(341.5, 3.5)
shape = SubResource("RectangleShape2D_04o2e")
disabled = true

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_v5ame")
initial_state = NodePath("idle")

[node name="Follow" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("enemy", "sprite")]
script = ExtResource("4_0x7kd")
enemy = NodePath("../..")
sprite = NodePath("../../Sprite2D")

[node name="idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_2kni1")
enemy = NodePath("../..")

[node name="attack" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("enemy", "animation_player")]
script = ExtResource("6_k47xl")
enemy = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="MyHurtBox" type="Area2D" parent="."]
script = ExtResource("7_bstqr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MyHurtBox"]
position = Vector2(-2.5, 3)
shape = SubResource("RectangleShape2D_1dsbx")

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/attack" method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="MyHurtBox" to="MyHurtBox" method="_on_area_entered"]
